update dialog-queue style about fixed overflow auto

--- a/src/queue.less
+++ b/src/queue.less
@@ -1,5 +1,6 @@
 .dialog-queue {
-  position: absolute;
+  position: fixed;
+  overflow: auto;
   top: 0;
   right: 0;
   bottom: 0;
